# gmacro

./: .gitignore  .hgignore  Actions.hs  Buttons.hs  MacroList.hs  Metacity.hs  Utils.hs  gmacro.cabal  gmacro.glade  gmacro.gladep  gmacro.hs  hellohaskell.glade  hellohaskell.gladep  hellohaskell.hs
