Name: gmacro
Version: 0.5.0
License: GPL
Maintainer: John Goerzen <jgoerzen@complete.org>
Author: John Goerzen
Stability: Beta
Copyright: Copyright (c) 2007 John Goerzen
license-file: COPYRIGHT
extra-source-files: COPYING
homepage: http://software.complete.org/gmacro
Category: Network
Synopsis: Keyboard macro record/binding for X
Build-Depends: base, unix, gtk, gconf, glade

Executable: test
Main-Is: test.hs
GHC-Options: -O2

Executable: hellohaskell
Main-Is: hellohaskell.hs
GHC-Options: -O2
